# fretsure

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  full-validation.yml  web.yml
data/benchmark/: source-census.json
data/gold/: README.md  sample_labeled.jsonl
docs/: BENCHMARK_RESULTS.md  BENCHMARK_V2_ACCEPTANCE.md  BENCHMARK_V2_TASK8_READINESS.md  DEMO_SCRIPT.md  MIDI_ACCEPTANCE.md  PLAN1_ACCEPTANCE.md  PLAN6A_ACCEPTANCE.md  PRODUCER_MUSICXML_ACCEPTANCE.md  PROJECT_STATE.md  SCOPE.md  WEB_API_MCP.md
docs/experiments/: 2026-07-16-producer-musicxml-census.json  2026-07-17-benchmark-v2-budget.md  2026-07-17-benchmark-v2-implementation-log.md  2026-07-17-benchmark-v2-prereg.json  2026-07-17-midi-census.json  2026-07-18-benchmark-v2-operational-budget.md  2026-07-18-benchmark-v2-operational-prereg.json  2026-07-18-benchmark-v2-pilot-spec.json  2026-07-18-gpt-5.6-sol-formal-billing-envelope.json  2026-07-18-gpt-5.6-sol-pricing-contract-v2.json  2026-07-18-gpt-5.6-sol-pricing-contract.json  2026-07-18-gpt-5.6-sol-pricing-source-v2.json  2026-07-18-gpt-5.6-sol-pricing-source.json  2026-07-23-fingering-quality-protocol.md  benchmark-v2-corpus-datasheet.md
docs/experiments/artifacts/: fingering-green-pairwise-ranker-v0.1.0-b6cc57b0.json
docs/experiments/benchmark-v2-formal-attempt-004/: README.md  artifact-index.json  receipt.json  report.json  report.md
docs/superpowers/plans/: 2026-07-09-fretsure-implementation-roadmap.md  2026-07-09-plan-1-core-oracle.md  2026-07-10-plan-2-solver-m0.md  2026-07-10-plan-3-agent-loop.md  2026-07-10-plan-4-benchmark.md  2026-07-10-plan-5-difficulty-accompaniment.md  2026-07-13-oracle-0.2-trust-gate.md  2026-07-13-pre-plan6-musicxml-input.md  2026-07-13-safe-mxl-container.md  2026-07-16-plan-6a-web-api-trace-mcp.md  2026-07-16-producer-driven-musicxml-ir.md  2026-07-17-benchmark-v2.md  2026-07-17-midi-input.md
docs/superpowers/specs/: 2026-07-09-fretsure-design.md
scripts/: audit_distributions.py  audit_egset12_fingering_ranker.py  build_benchmark_corpus.py  build_benchmark_precall.py  build_benchmark_prereg.py  check_markdown_links.py  evaluate_fingering_ranker.py  generate_midi_fixtures.py  generate_producer_fixtures.py  replay_producer_census.py  smoke_distributions.py  solver_quality_eval.py  task8_budget_gate.py  task8_pilot.py  task9_operational_stub_gate.py  task9_recover_orphan_lanes.py  task9_throughput_pilot.py  train_fingering_ranker.py
src/fretsure/: __init__.py  cli.py  demo.py  geometry.py  ir.py  pipeline.py  pipeline_m0.py  tab.py
src/fretsure/accompaniment/: __init__.py  api.py  patterns.py
src/fretsure/agent/: __init__.py  arranger.py  critic.py  edit_dsl.py  harness.py  incremental.py  model_calls.py  repair.py  tools.py  trace.py
src/fretsure/api/: __init__.py  app.py  body.py  cli.py  problems.py
src/fretsure/application/: __init__.py  contracts.py  serializers.py  service.py  target.py
src/fretsure/arrange/: __init__.py  propose.py
src/fretsure/bench/: __init__.py  ablation.py  artifacts.py  baselines.py  checker_vs_judge.py  concurrent.py  contamination.py  contracts.py  corpus.py  corpus_sources.py  execution_provenance.py  experiment.py  generator.py  normalizers.py  observe.py  (+8 more)
tests/: test_cli.py  test_demo.py  test_distribution_audit.py  test_geometry.py  test_ir.py  test_pipeline.py  test_pipeline_m0.py  test_smoke.py  test_tab.py  test_tab_schema.py
tests/accompaniment/: test_accompaniment.py
tests/agent/: test_arranger.py  test_critic.py  test_edit_dsl.py  test_harness.py  test_incremental.py  test_observation_integration.py  test_repair.py  test_tools.py  test_trace.py
tests/api/: test_app.py  test_body.py  test_cli.py
tests/application/: test_serializers.py  test_service.py  test_target.py
tests/bench/: test_ablation.py  test_artifacts.py  test_baselines.py  test_build_benchmark_corpus.py  test_checker_vs_judge.py  test_concurrent.py  test_contamination.py  test_contracts.py  test_corpus.py  test_corpus_sources.py  test_execution_provenance.py  test_experiment.py  test_generator.py  test_normalizers.py  test_observe.py  test_paired_ablation.py  test_precall.py  test_preregistration.py  test_progress.py  test_public_adapters.py  test_reliability.py  test_reliability_contract.py  test_report.py  test_runner.py  test_runner_concurrent.py  test_stats.py  test_task8_budget_gate.py  test_task8_pilot.py  test_task9_operational_stub_gate.py  test_task9_precall_builder.py  test_task9_recover_orphan_lanes.py  test_task9_throughput_pilot.py
tests/difficulty/: test_checker.py  test_score.py  test_simplify.py  test_tiers.py
tests/importers/: test_midi_adapter.py  test_midi_importer.py  test_midi_preflight.py  test_midi_producer_fixtures.py  test_midi_security.py  test_musicxml_adapter.py  test_musicxml_bytes.py  test_musicxml_external_refs.py  test_musicxml_io.py  test_musicxml_preflight.py  test_mxl_io.py  test_producer_fixtures.py  test_score_dispatcher.py
tests/llm/: test_anthropic_compat.py  test_client.py  test_proxy_transport.py
tests/mcp/: test_server.py
tests/metrics/: test_fidelity.py  test_fidelity_authoritative.py
tests/oracle/: test_core.py  test_csp.py  test_input_contract.py  test_predicates_lh.py  test_predicates_rh.py  test_predicates_temporal.py  test_profiles.py
tests/render/: test_ascii.py  test_guitar_pro.py  test_midi.py  test_musicxml_tab.py  test_pdf_tab.py  test_tab_text.py
tests/scripts/: test_audit_egset12_fingering_ranker.py  test_evaluate_fingering_ranker.py  test_solver_quality_eval.py  test_train_fingering_ranker.py
tests/solver/: test_candidates.py  test_cost.py  test_frames.py  test_green_finalist_pool.py  test_green_priority_regression.py  test_guarded_ranker.py  test_quality_objective.py  test_score_solve.py  test_solve.py
tests/validation/: test_metamorphic.py  test_mutation.py  test_property_monotone.py  test_stats.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
web/tests/: App.test.tsx  api.test.ts  fixtures.ts  setup.ts
(+85 files in other folders)
