[project]
name = "fretsure-oracle"
version = "0.1.0"
description = "Deterministic guitar-playability oracle for the Fretsure arrangement agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.11",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40",
]
musicxml = [
    "defusedxml>=0.7.1,<1",
    "music21>=10.5,<11",
]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.10",
    "anthropic>=0.40",
    "defusedxml>=0.7.1,<1",
    "music21>=10.5,<11",
]

[project.scripts]
fretsure-bench = "fretsure.bench.runner:main"
fretsure-demo = "fretsure.demo:main"
fretsure-arrange = "fretsure.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fretsure"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: needs the local LLM proxy (skipped by -m 'not integration')"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "music21.*"
ignore_missing_imports = true
