[project]
name = "fretsure-oracle"
version = "0.5.0"
description = "Deterministic guitar-playability oracle for the Fretsure arrangement agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40",
    "httpx>=0.28,<0.29",
]
musicxml = [
    "defusedxml>=0.7.1,<1",
    "music21==10.5.0",
]
midi = [
    "music21==10.5.0",
]
score = [
    "defusedxml>=0.7.1,<1",
    "music21==10.5.0",
]
service = [
    "fastapi>=0.139,<0.140",
    "uvicorn[standard]>=0.41,<0.42",
]
mcp = [
    "mcp>=1.28.1,<1.29",
]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.10",
    "anthropic>=0.40",
    "defusedxml>=0.7.1,<1",
    "fastapi>=0.139,<0.140",
    "httpx>=0.28,<0.29",
    "mcp>=1.28.1,<1.29",
    "music21==10.5.0",
    "uvicorn[standard]>=0.41,<0.42",
]

[project.scripts]
fretsure-bench = "fretsure.bench.runner:main"
fretsure-demo = "fretsure.demo:main"
fretsure-arrange = "fretsure.cli:main"
fretsure-serve = "fretsure.api.cli:main"
fretsure-mcp = "fretsure.mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fretsure"]

[tool.hatch.build.targets.sdist]
include = [
    "/.github",
    "/.gitignore",
    "/.python-version",
    "/CLAUDE.md",
    "/README.md",
    "/data/gold",
    "/docs",
    "/pyproject.toml",
    "/scripts",
    "/src",
    "/tests",
    "/uv.lock",
    "/web",
]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]",
    "**/.DS_Store",
    "**/*.log",
    "/web/coverage",
    "/web/node_modules",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: needs the local LLM proxy (skipped by -m 'not integration')"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "music21.*"
ignore_missing_imports = true
