[project]
name = "fretsure-oracle"
version = "0.6.0"
description = "Deterministic guitar-playability oracle for the Fretsure arrangement agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40",
    "httpcore>=1.0.9,<1.1",
    "httpx>=0.28,<0.29",
]
benchmark = [
    "anthropic>=0.40",
    "httpcore>=1.0.9,<1.1",
    "httpx>=0.28,<0.29",
    "defusedxml>=0.7.1,<1",
    "music21==10.5.0",
]
musicxml = [
    "defusedxml>=0.7.1,<1",
    "music21==10.5.0",
]
midi = [
    "music21==10.5.0",
]
exports = [
    "pyguitarpro>=0.11,<0.12",
    "reportlab>=4.4,<5",
]
score = [
    "defusedxml>=0.7.1,<1",
    "music21==10.5.0",
]
service = [
    "fastapi>=0.139,<0.140",
    "pyguitarpro>=0.11,<0.12",
    "reportlab>=4.4,<5",
    "uvicorn[standard]>=0.41,<0.42",
]
mcp = [
    "mcp>=1.28.1,<1.29",
]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.10",
    "anthropic>=0.40",
    "defusedxml>=0.7.1,<1",
    "fastapi>=0.139,<0.140",
    "httpcore>=1.0.9,<1.1",
    "httpx>=0.28,<0.29",
    "mcp>=1.28.1,<1.29",
    "music21==10.5.0",
    "pdfplumber>=0.11,<0.12",
    "pyguitarpro>=0.11,<0.12",
    "pypdf>=6,<7",
    "reportlab>=4.4,<5",
    "uvicorn[standard]>=0.41,<0.42",
]

[project.scripts]
fretsure-bench = "fretsure.bench.runner:main"
fretsure-demo = "fretsure.demo:main"
fretsure-arrange = "fretsure.cli:main"
fretsure-serve = "fretsure.api.cli:main"
fretsure-mcp = "fretsure.mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fretsure"]

[tool.hatch.build.targets.wheel.force-include]
"data/benchmark/source-census.json" = "fretsure/bench/data/source-census.json"
"data/benchmark/sources/mutopia-bach-bwv774.mid" = "fretsure/bench/data/sources/mutopia-bach-bwv774.mid"
"data/benchmark/sources/mutopia-bach-bwv775.mid" = "fretsure/bench/data/sources/mutopia-bach-bwv775.mid"
"data/benchmark/sources/openscore-lieder-beethoven-op48-5.mxl" = "fretsure/bench/data/sources/openscore-lieder-beethoven-op48-5.mxl"
"docs/experiments/2026-07-18-benchmark-v2-operational-prereg.json" = "fretsure/bench/data/benchmark-v2-prereg.json"

[tool.hatch.build.targets.sdist]
include = [
    "/.github",
    "/.gitignore",
    "/.python-version",
    "/CLAUDE.md",
    "/README.md",
    "/data/benchmark",
    "/data/gold",
    "/docs",
    "/pyproject.toml",
    "/scripts",
    "/src",
    "/tests",
    "/uv.lock",
    "/web",
]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]",
    "**/.DS_Store",
    "**/*.log",
    "**/blobs.jsonl",
    "**/journal.jsonl",
    "**/private-observations.json",
    "**/rows.jsonl",
    "**/wal.jsonl",
    "/benchmarks/results",
    "/outputs",
    "/web/coverage",
    "/web/node_modules",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: needs the local LLM proxy (skipped by -m 'not integration')"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "music21.*"
ignore_missing_imports = true
